turtleart.polygon6.Polygon6.scala.error
Compilation error:
Polygon6:7: error: overloaded method value forward with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
    forward();
    ^