turtleart.polygon6.Polygon6.scala.code
override def run() {
  drawEq(6, 80);
}

def drawEq(numEdges:Int, size:Double) {
  for (i <- 1 to numEdges) {
    forward();
    right(180-(180/numEdges))
  }
}